--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@react-spring/web": "^10.0.3",
+    "@vercel/analytics": "^1.6.1",
     "canvas-confetti": "^1.9.4",
     "next": "16.0.8",
     "react": "19.2.1",
